--- a/promstan-test.html
+++ b/promstan-test.html
@@ -57,6 +57,8 @@
 
 	<main>
 		<div class="path">
+			<div class="container">
+
 				<a href=" ">Главная</a>
 				<span style="color:#e5af26; margin:0 0.5% 0 0.5%;">/</span>
 				<a href=" ">Запчасти</a>
@@ -64,6 +66,7 @@
 				<a href=" ">Запчасти Tapco</a>
 				<span style="color:#e5af26; margin:0 0.5% 0 0.5%;">/</span>
 				<a href=" ">Ролик режущий на нож Tapco</a>
+			</div>
 		</div>
 
 		<div class="content">
